--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,13 +11,11 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}/node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+      "program": "${workspaceFolder}/node_modules/.bin/webpack-dev-server",
       "args": [
-        "--open"
+        "--open",
+        "--env"
       ],
-      "env": {
-        "NODE_ENV": "development"
-      }
     }
   ]
 }
