--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "webpack --mode development",
-    "start": "webpack-dev-server --open",
-    "watch": "webpack-dev-server --watch --open"
+    "build": "webpack --env.prod --hide-modules",
+    "start": "webpack-dev-server --open --env"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
@@ -22,8 +21,10 @@
     "html-webpack-plugin": "^4.3.0",
     "less-loader": "^6.1.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^3.0.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
