add mobile test demo

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch Webpack dev server",
+      "name": "Launch-via-Webpack-dev-server",
       "skipFiles": [
         "<node_internals>/**"
       ],
